# internal/models/created_order_data.go
@@ -19,6 +19,10 @@ import (
 // swagger:model CreatedOrderData
 type CreatedOrderData struct {
 
+	// Причина ошибки
+	// Required: true
+	FailReason string `json:"fail_reason"`
+
 	// Номер заказа
 	// Required: true
 	OrderNumber string `json:"order_number"`
@@ -32,6 +36,10 @@ type CreatedOrderData struct {
 func (m *CreatedOrderData) Validate(formats strfmt.Registry) error {
 	var res []error
 
+	if err := m.validateFailReason(formats); err != nil {
+		res = append(res, err)
+	}
+
 	if err := m.validateOrderNumber(formats); err != nil {
 		res = append(res, err)
 	}
@@ -43,6 +51,15 @@ func (m *CreatedOrderData) Validate(formats strfmt.Registry) error {
 	if len(res) > 0 {
 		return errors.CompositeValidationError(res...)
 	}
+	return nil
+}
+
+func (m *CreatedOrderData) validateFailReason(formats strfmt.Registry) error {
+
+	if err := validate.RequiredString("fail_reason", "body", m.FailReason); err != nil {
+		return err
+	}
+
 	return nil
 }
 
